# cell_tree2d

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  conda_requirements.txt  pixi.toml  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yaml  conda_test.yaml  main.yml
cell_tree2d/: __init__.py  cell_tree2d.cpp  cell_tree2d.pyd  cell_tree2d.pyx
cell_tree2d/test/: cell_tree_test.ipynb  test_cell_tree2d.py  test_quad_grid.py
conda-recipe/: meta.yaml
examples/: cell_tree_test.ipynb
src/: cell_tree2d.cpp  cell_tree2d.h  cell_tree2d_c.cpp  grid_data.cpp  grid_data.h  makefile  makefile.osx
src/cell_tree2d/: __init__.py  cell_tree2d.pyx
src/cell_tree2d/test/: test_cell_tree2d.py  test_poly_grid.py  test_quad_grid.py  test_sanity_check.py
src/cell_tree2d_cpp/: cell_tree2d.cpp  cell_tree2d_c.cpp  cell_tree2d_c.h  testmain.cpp
src/cell_tree2d_cpp/test_data/: quad_grid.txt  small8overlaptestgrid.txt  small8testgrid.txt
src/test_data/: bigtestgrid.txt  diamondperf10.txt  non_over_small8testgrid.txt  quad_grid.txt  small2testgrid.txt  small4testgrid.txt  sparsetestgrid.txt  squaretestgrid.txt  threediamondtest.txt
tests/: test_cell_tree2d.py  test_quad_grid.py
