[build-system]
requires = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "cell-tree2d"
dynamic = ["version"]
description = "Python wrappers around Cell-Tree 2D spatial index"
readme = "README.rst"
license = "CC0-1.0"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Jay Hennen", email = "jay.hennen@noaa.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 2 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/NOAA-ORR-ERD"

[dependency-groups]
test = ["pytest"]
build = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
dev = [{ include-group = "test" }, { include-group = "build"}, "build"]

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "cell_tree2d/__init__.py"

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = "pytest --pyargs cell-tree2d"
skip = ["*musl*"]
linux.before-all = [
   "dnf install -y gd-devel",
]
macos.config-settings = { "cmake.define.BUILD_DEPS" = "ON"}
macos.environment.MACOSX_DEPLOYMENT_TARGET = "13"

# Use delvewheel on windows
#  is this required? no third party libs
# [tool.cibuildwheel.windows]
# before-build = [
#     "pip install delvewheel",
#     "pwd",
#     "ls -a"
# ]
# repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

